Istio-Canary-Deployment/code/istio/gateway/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-app
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - go-app.kombaraj.com

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-app
spec:
  hosts:
  - go-app.kombaraj.com
  gateways:
  - go-app
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: go-app
        port:
          number: 80
